# fastapi-dash

./: Makefile  README.md  docker-compose.yml  pyproject.toml
app/server/: __init__.py  main.py
app/server/api/: health_check_endpoints.py
app/server/dashboards/: mounts.py
app/server/dashboards/dash_test/: dashboard.py
app/server/dashboards/hello_world/: dashboard.py
app/server/dashboards/landingpage/: dashboard.py
config/: dev.env  prod.env
deployment/docker/: Dockerfile  Dockerfile.dev
deployment/k8s/: 3-service.yaml  4-ingress.yaml  5-deployment.yaml
