[tool.poetry]
name = "fastapi-dash"
version = "1.0.0"
description = "Plotly Dash embedded in FastAPI"
authors = [
    "mstaal",
]
packages=[{ include="app"},]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
python-json-logger = "2.0.2"
numpy = "^1.22.3"
pandas = "1.4.0"
pydantic = "^1.10.0"
fastapi = "0.104.1"
uvicorn = "0.24.0.post1"
a2wsgi = "1.8.0"
dash = "^2.14.1"
dash-bootstrap-components = "^1.5.0"
certifi = ">=2023.07.22"
debugpy = { version = "^1.6", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=5.3.3"
jsonschema = "^4.17.0"
nose = "1.3.7"
coverage = "5.0.3"
deepdiff6 = ">=6.2.0"
devtools = ">=0.9.0"
requests = ">= 2.28.1"

[tool.poetry.extras]
debugpy = ["debugpy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
